css/style.css
/* Make sure elements fill up the entire available space */
html, body {
  width: 100%;
  height: 100%;
}


body {
  /* Reset styles */
  margin: 0;
  padding: 0;
  font-family: Verdana, sans-serif;
}


/* Home wrapper styling. Uses flexbox. */

.content {
  display: flex;
  flex-direction: column;
  margin: 0 0.5em;
}

.content > * {
  margin: 0.5em 0;
}


.page-header {
  width: 100%;
  padding-bottom: 0.6em; /* Padding to space bottom border */
  border-bottom: 2px solid #bcbbbb;/* Border acting as a divider */
}

/* Styling for the main icon */

.header-logo {
  width: 4em; /*larger size*/
  float: left;
}


.page-title, .page-subtitle {
  font-weight: 400;
  color: #333; /*A dark gray */
  text-align: right;
}

.page-subtitle {
  text-transform: capitalize;
}


.page-title {
  font-size: 2.5em;
}

.main-figure {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
}

.main-figure-hero {
  width: 100%;
  min-height: 200px;
  background: url(/placeholder.png) center center;
  margin-bottom: 5px;
}




/*The 3 squares of different colors*/
.color-square-container {
  margin-top: 5px;
  line-height: 30px;
  width: 100%;
  display: flex;
  justify-content: space-between;
}
.color-squares, .color-square-captions {
  display: flex;
}


.color-square {
  width: 30px;
  height: 30px;
  display: inline-block;
  margin: 0 3px;
}

.color-square:nth-child(1) {
  background-color: #f7981d;
}

.color-square:nth-child(2) {
  background-color: #bbbbbb;
}

.color-square:nth-child(3) {
  background-color: #666756;
}


.color-square-caption {
  margin: 0 3px;
}



/*Featured work section*/




/*Each item featured*/
.featured-item {
  width: 50%;
  padding: 5px;
}



.featured-item-title {
  width: 100%;
  padding-left: 10px;/*So the text is offset a little to the right*/
  color: #bbb;
  font-weight: 400; /*Normal font weight*/
}

.featured-items-container {
  width: 100%;
  display: flex;
}

.featured-item-img {
  width: 100%;
}

.featured-item-heading {
  color: #777;
  font-size: 1.5em;
  font-weight: 400;
  text-align: center;
}

.featured-item-link {
  text-decoration: none;
  color: #bbb;
  width: 100%;
  text-align: center;
  display: block; /*Display as block so it can be dynamically sized*/
  font-size: 0.8em;
}
/*Clear the paddings of the featured items on both sides*/

.featured-item:first-child {
  padding-left: 0;
}

.featured-item:last-child {
  padding-right: 0;
}


/* Responsive design section */

@media screen and (min-width: 450px) {
  body {
    font-size: 1.3em;
  }
  .color-square-container {
    line-height: 50px;
  }
  .color-square {
    width: 45px;
    height: 45px;
  }
  .main-figure-hero {
    min-height: 300px;
  }
}

@media screen and (min-width: 600px) {
  body {
    font-size: 1.6em;
  }
  .main-figure-hero {
    min-height: 320px;
    display: flex;
  }
  .featured-item {
    width: 33.3333%;
  }
  .page-header {
    border-bottom: 4px solid #bcbbbb;;
  }
  .featured-item-link {
    font-size: 0.6em;
  }
}

@media screen and (min-width: 1100px) {

  .content {
    width: 1100px;
    margin: 1.5em auto 0 auto;
  }

  .page-header,
  .featured-work-container {
    width: 85%;
    align-self: flex-end;
  }

  .main-figure {
    justify-content: flex-end;
  }
  .main-figure-hero {
    width: 85%;
    height: 380px;
  }

  .color-square-container {
    order: -1;
    width: 120px;
    flex-wrap: wrap;
  }
  .color-squares {
    flex-wrap: wrap;
  }
  .color-square {
    width: 70px;
    height: 70px;
    margin: 5px 0;
  }
  /*.color-squar*/
  .color-square-captions {
    flex-wrap: wrap;
    font-size: 0.7em;
    line-height: 1em;
  }
  .color-square-caption {
    margin-left: -5px;
  }

}


/*Clear the paddings of the featured items on both sides*/

/*No margin for headings*/
h1, h2, h3, h4, h5, h6 {
  margin: 0;
}

figure {
  margin: 0;
}

